[#87295212] Fix button bugs on firefox, and harmized button style. Fix row class bugs on firefox with the overflow hidden properties

--- a/assets/stylesheet/app/editionPage/formView.less
+++ b/assets/stylesheet/app/editionPage/formView.less
@@ -40,6 +40,9 @@
             }
 
             button{
+                &.grey:first-child {
+                    margin-right: 20px;
+                }
                 margin-top: 15px;
                 label:hover {
                     cursor : pointer;
