--- a/assets/stylesheet/app/editionPage/panel.less
+++ b/assets/stylesheet/app/editionPage/panel.less
@@ -259,6 +259,11 @@
                     content: "\f070";
                 }
 
+                &.picto-horizontalline:before {
+                    .fa;
+                    content: "\f068";
+                }
+
            }
            &.fa-plus {
                 position: absolute;
