--- a/assets/stylesheet/app/formbuilder.less
+++ b/assets/stylesheet/app/formbuilder.less
@@ -1,6 +1,5 @@
 #mainRegion {
     height      : 100%;
-    overflow    : hidden;
 
     &>div:first-child {
         height : 100%;
